Test/exports/OpenImportRefined.dfy.expect
OpenImportRefined.dfy(15,7): Error: Base module Base imports T from an opened import, so it cannot be overridden. Give this declaration a unique name to disambiguate.
OpenImportRefined.dfy[Refined](11,17): Error: The name T ambiguously refers to a type in one of the modules Refined, GiveT (try qualifying the type name with the module name)
OpenImportRefined.dfy(34,16): Error: The name T ambiguously refers to a type in one of the modules Refined2, GiveT2 (try qualifying the type name with the module name)
OpenImportRefined.dfy(51,11): Error: Base module BaseF imports f from an opened import, so it cannot be overridden. Give this declaration a unique name to disambiguate.
4 resolution/type errors detected in OpenImportRefined.dfy
